--- a/css/style.css
+++ b/css/style.css
@@ -77,29 +77,50 @@ body {
     letter-spacing: 1.7rem;
     animation: moveInRight 0.8s ease-in-out; }
 
-/* line 1, sass/layout/_header.scss */
-.header {
-  position: relative;
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, #7ed56fcb, #28b485cc), url("../img/hero.jpg");
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-  /* line 10, sass/layout/_header.scss */
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  /* line 16, sass/layout/_header.scss */
-  .header__logo {
-    height: 3.5rem; }
-  /* line 20, sass/layout/_header.scss */
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
+/* line 35, sass/base/_typography.scss */
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all 0.3s ease-in-out; }
+  /* line 50, sass/base/_typography.scss */
+  .heading-secondary:hover {
+    transform: skew(15deg, 2deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+/* line 56, sass/base/_typography.scss */
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+/* line 62, sass/base/_typography.scss */
+.paragraph {
+  font-size: 1.6rem; }
+  /* line 65, sass/base/_typography.scss */
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+/* line 1, sass/base/_utilities.scss */
+.u-center-text {
+  text-align: center; }
+
+/* line 5, sass/base/_utilities.scss */
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+/* line 9, sass/base/_utilities.scss */
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+/* line 13, sass/base/_utilities.scss */
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
 
 /* line 2, sass/components/_button.scss */
 .btn:link, .btn:visited {
@@ -150,3 +171,248 @@ body {
 .btn--animated {
   animation: moveInBottom 0.5s 0.7s ease-in-out;
   animation-fill-mode: backwards; }
+
+/* line 57, sass/components/_button.scss */
+.btn-text:link, .btn-text:visited {
+  color: #55c57a;
+  font-size: 1.6rem;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 0.5rem 1rem;
+  transition: all 0.3s ease-in-out; }
+
+/* line 68, sass/components/_button.scss */
+.btn-text:hover {
+  color: #ffffff;
+  background-color: #55c57a;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translate(0, -0.2rem); }
+
+/* line 75, sass/components/_button.scss */
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translate(0, 0.2rem); }
+
+/* line 1, sass/components/_composition.scss */
+.composition {
+  position: relative; }
+  /* line 4, sass/components/_composition.scss */
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 1rem;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+    outline-offset: 2rem; }
+    /* line 12, sass/components/_composition.scss */
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    /* line 16, sass/components/_composition.scss */
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    /* line 20, sass/components/_composition.scss */
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    /* line 25, sass/components/_composition.scss */
+    .composition__photo:hover {
+      outline: 1rem solid #55c57a;
+      z-index: 1;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.8);
+      transform: scale(1.05) translateY(-0.5rem); }
+  /* line 33, sass/components/_composition.scss */
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
+/* line 1, sass/components/_feature-box.scss */
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-style: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 0.3rem;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: all 0.3s ease-in-out; }
+  /* line 9, sass/components/_feature-box.scss */
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.25); }
+  /* line 13, sass/components/_feature-box.scss */
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    color: transparent; }
+
+/* line 1, sass/components/_cards.scss */
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  height: 52rem; }
+  /* line 6, sass/components/_cards.scss */
+  .card__side {
+    height: 52rem;
+    transition: all 0.8s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    /* line 18, sass/components/_cards.scss */
+    .card__side--front {
+      background-color: #ffffff; }
+    /* line 22, sass/components/_cards.scss */
+    .card__side--back {
+      transform: rotateY(180deg); }
+      /* line 24, sass/components/_cards.scss */
+      .card__side--back--1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+  /* line 33, sass/components/_cards.scss */
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  /* line 36, sass/components/_cards.scss */
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
+  /* line 41, sass/components/_cards.scss */
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    /* line 47, sass/components/_cards.scss */
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../../img/nat-5.jpg"); }
+    /* line 55, sass/components/_cards.scss */
+    .card__picture--2 {
+      background-image: url("../../img/nat-5.jpg"); }
+    /* line 58, sass/components/_cards.scss */
+    .card__picture--3 {
+      background-image: url("../../img/nat-5.jpg"); }
+  /* line 63, sass/components/_cards.scss */
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #ffffff;
+    position: absolute;
+    text-align: right;
+    top: 12rem;
+    right: 2rem;
+    width: 73%; }
+  /* line 75, sass/components/_cards.scss */
+  .card__heading-span {
+    padding: 0.5rem;
+    -webkit-box-decoration-break: clone; }
+    /* line 78, sass/components/_cards.scss */
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+  /* line 87, sass/components/_cards.scss */
+  .card__details {
+    padding: 2rem; }
+    /* line 89, sass/components/_cards.scss */
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      /* line 93, sass/components/_cards.scss */
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        /* line 98, sass/components/_cards.scss */
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+
+/* line 1, sass/layout/_header.scss */
+.header {
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, #7ed56fcb, #28b485cc), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  /* line 10, sass/layout/_header.scss */
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  /* line 16, sass/layout/_header.scss */
+  .header__logo {
+    height: 3.5rem; }
+  /* line 20, sass/layout/_header.scss */
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+
+/* line 1, sass/layout/_grid.scss */
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  /* line 5, sass/layout/_grid.scss */
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  /* line 2, sass/abstracts/_mixins.scss */
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  /* line 11, sass/layout/_grid.scss */
+  .row [class^="col-"] {
+    float: left; }
+  /* line 15, sass/layout/_grid.scss */
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+    /* line 18, sass/layout/_grid.scss */
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
+  /* line 23, sass/layout/_grid.scss */
+  .row .col-1-of-3 {
+    width: calc((100% - (6rem * 2)) / 3); }
+    /* line 25, sass/layout/_grid.scss */
+    .row .col-1-of-3:not(:last-child) {
+      margin-right: 6rem; }
+  /* line 30, sass/layout/_grid.scss */
+  .row .col-2-of-3 {
+    width: calc(((100% - (6rem * 2)) / 3) * 2 + 6rem); }
+    /* line 32, sass/layout/_grid.scss */
+    .row .col-2-of-3:not(:last-child) {
+      margin-right: 6rem; }
+  /* line 37, sass/layout/_grid.scss */
+  .row .col-1-of-4 {
+    width: calc((100% - (6rem * 3)) / 4); }
+    /* line 39, sass/layout/_grid.scss */
+    .row .col-1-of-4:not(:last-child) {
+      margin-right: 6rem; }
+
+/* line 1, sass/pages/_home.scss */
+.section-about {
+  background-color: #f1f1f1;
+  padding: 25rem 0;
+  margin-top: -20vh; }
+
+/* line 7, sass/pages/_home.scss */
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56fcb, #28b485cc), url("../../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  /* line 15, sass/pages/_home.scss */
+  .section-features > * {
+    transform: skewY(7deg); }
+
+/* line 20, sass/pages/_home.scss */
+.section-tours {
+  margin-top: -10rem;
+  padding: 25rem 0 50rem 0; }
