--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,12 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "pages/home";
+@import "components/button";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/cards";
 
 @import "layout/header";
-@import "components/button";
+@import "layout/grid";
+
+@import "pages/home";
