--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,14 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+/* line 17, sass/base/_utilities.scss */
+.u-margin-bottom-huge {
+  margin-top: 10rem; }
+
+/* line 21, sass/base/_utilities.scss */
+.u-margin-bottom-big {
+  margin-top: 8rem; }
+
 /* line 2, sass/components/_button.scss */
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -155,6 +163,15 @@ body {
     background-color: #ffffff; }
 
 /* line 37, sass/components/_button.scss */
+.btn--green {
+  background-color: #55c57a;
+  color: #ffffff;
+  padding: 1.5rem 4rem; }
+  /* line 42, sass/components/_button.scss */
+  .btn--green::after {
+    background-color: #55c57a; }
+
+/* line 47, sass/components/_button.scss */
 .btn::after {
   content: "";
   display: inline-block;
@@ -167,12 +184,12 @@ body {
   z-index: -1;
   transition: all 0.4s ease-in-out; }
 
-/* line 50, sass/components/_button.scss */
+/* line 60, sass/components/_button.scss */
 .btn--animated {
   animation: moveInBottom 0.5s 0.7s ease-in-out;
   animation-fill-mode: backwards; }
 
-/* line 57, sass/components/_button.scss */
+/* line 67, sass/components/_button.scss */
 .btn-text:link, .btn-text:visited {
   color: #55c57a;
   font-size: 1.6rem;
@@ -182,14 +199,14 @@ body {
   padding: 0.5rem 1rem;
   transition: all 0.3s ease-in-out; }
 
-/* line 68, sass/components/_button.scss */
+/* line 78, sass/components/_button.scss */
 .btn-text:hover {
   color: #ffffff;
   background-color: #55c57a;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translate(0, -0.2rem); }
 
-/* line 75, sass/components/_button.scss */
+/* line 85, sass/components/_button.scss */
 .btn-text:active {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translate(0, 0.2rem); }
@@ -274,29 +291,35 @@ body {
       /* line 24, sass/components/_cards.scss */
       .card__side--back--1 {
         background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
-  /* line 33, sass/components/_cards.scss */
+      /* line 31, sass/components/_cards.scss */
+      .card__side--back--2 {
+        background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+      /* line 38, sass/components/_cards.scss */
+      .card__side--back--3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+  /* line 48, sass/components/_cards.scss */
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
-  /* line 36, sass/components/_cards.scss */
+  /* line 52, sass/components/_cards.scss */
   .card:hover .card__side--back {
     transform: rotateY(0deg); }
-  /* line 41, sass/components/_cards.scss */
+  /* line 57, sass/components/_cards.scss */
   .card__picture {
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
-    /* line 47, sass/components/_cards.scss */
+    /* line 63, sass/components/_cards.scss */
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../../img/nat-5.jpg"); }
-    /* line 55, sass/components/_cards.scss */
+    /* line 71, sass/components/_cards.scss */
     .card__picture--2 {
-      background-image: url("../../img/nat-5.jpg"); }
-    /* line 58, sass/components/_cards.scss */
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url("../../img/nat-6.jpg"); }
+    /* line 79, sass/components/_cards.scss */
     .card__picture--3 {
-      background-image: url("../../img/nat-5.jpg"); }
-  /* line 63, sass/components/_cards.scss */
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("../../img/nat-7.jpg"); }
+  /* line 89, sass/components/_cards.scss */
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -307,29 +330,121 @@ body {
     top: 12rem;
     right: 2rem;
     width: 73%; }
-  /* line 75, sass/components/_cards.scss */
+  /* line 101, sass/components/_cards.scss */
   .card__heading-span {
     padding: 0.5rem;
     -webkit-box-decoration-break: clone; }
-    /* line 78, sass/components/_cards.scss */
+    /* line 104, sass/components/_cards.scss */
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
-  /* line 87, sass/components/_cards.scss */
+    /* line 112, sass/components/_cards.scss */
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+    /* line 119, sass/components/_cards.scss */
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+  /* line 128, sass/components/_cards.scss */
   .card__details {
     padding: 2rem; }
-    /* line 89, sass/components/_cards.scss */
+    /* line 130, sass/components/_cards.scss */
     .card__details ul {
       list-style: none;
       width: 80%;
       margin: 0 auto; }
-      /* line 93, sass/components/_cards.scss */
+      /* line 134, sass/components/_cards.scss */
       .card__details ul li {
         text-align: center;
         font-size: 1.5rem;
         padding: 1rem; }
-        /* line 98, sass/components/_cards.scss */
+        /* line 139, sass/components/_cards.scss */
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #eee; }
+  /* line 146, sass/components/_cards.scss */
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  /* line 155, sass/components/_cards.scss */
+  .card__price-box {
+    margin-bottom: 8rem;
+    color: #ffffff; }
+  /* line 160, sass/components/_cards.scss */
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  /* line 165, sass/components/_cards.scss */
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
+
+/* line 1, sass/components/_story.scss */
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+  background-color: rgba(255, 255, 255, 0.6); }
+  /* line 11, sass/components/_story.scss */
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative; }
+  /* line 22, sass/components/_story.scss */
+  .story__img {
+    height: 100%;
+    object-fit: cover;
+    transform: translateX(-3.5rem) scale(1.4);
+    transition: all 0.3s ease-in-out; }
+  /* line 29, sass/components/_story.scss */
+  .story__text {
+    transform: skewX(12deg); }
+  /* line 33, sass/components/_story.scss */
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    backface-visibility: hidden; }
+  /* line 46, sass/components/_story.scss */
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  /* line 50, sass/components/_story.scss */
+  .story:hover .story__img {
+    transform: translateX(-3.5rem) scale(1);
+    filter: blur(3px) brightness(95%); }
+
+/* line 1, sass/components/_bg-video.scss */
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15;
+  overflow: hidden; }
+  /* line 11, sass/components/_bg-video.scss */
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 /* line 1, sass/layout/_header.scss */
 .header {
@@ -415,4 +530,9 @@ body {
 /* line 20, sass/pages/_home.scss */
 .section-tours {
   margin-top: -10rem;
-  padding: 25rem 0 50rem 0; }
+  padding: 25rem 0 15rem 0; }
+
+/* line 25, sass/pages/_home.scss */
+.section-stories {
+  padding: 15rem 0;
+  position: relative; }
