--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -13,4 +13,11 @@
 .u-margin-bottom-small {
   margin-bottom: 1.5rem;
 }
- 
+
+.u-margin-bottom-huge {
+  margin-top: 10rem;
+}
+
+.u-margin-bottom-big {
+  margin-top: 8rem;
+}
