--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,6 +34,16 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    padding: 1.5rem 4rem;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &::after {
     content: "";
     display: inline-block;
@@ -73,7 +83,7 @@
   }
 
   &:active {
-    box-shadow: 0 .5rem 1rem rgba($color-black, 0.15);
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
     transform: translate(0, 0.2rem);
   }
 }
