--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -19,5 +19,10 @@
 
 .section-tours {
   margin-top: -10rem;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
+}
+
+.section-stories {
+  padding: 15rem 0;
+  position: relative;
 }
