--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,8 @@ $color-white: #ffffff;
 $color-gray: #777;
 $color-gray-light: #f1f1f1;
 $color-gray-light-1: #eee;
+$color-gray-dark-2: #999;
+
 $color-black: #000000;
 
 $color-secondary-light: #ffb900;
