--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -7,6 +8,7 @@
     border-radius: 10rem;
     transition: all 0.2s ease-in-out;
     position: relative;
+    border: none;
   }
 
   &:hover {
