--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import "components/cards";
 @import "components/story";
 @import "components/bg-video.scss";
-
+@import "components/form";
 @import "layout/header";
 @import "layout/grid";
 
