--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,9 @@
 @import "components/story";
 @import "components/bg-video.scss";
 @import "components/form";
+
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 @import "pages/home";
