--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,54 @@ body {
     .row .col-1-of-4:not(:last-child) {
       margin-right: 6rem; }
 
+/* line 1, sass/layout/_footer.scss */
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  color: #f1f1f1; }
+  /* line 6, sass/layout/_footer.scss */
+  .footer__logo-box {
+    text-align: center;
+    margin-bottom: 8rem; }
+  /* line 11, sass/layout/_footer.scss */
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
+  /* line 16, sass/layout/_footer.scss */
+  .footer__list {
+    list-style: none; }
+  /* line 20, sass/layout/_footer.scss */
+  .footer__navigation {
+    border-top: 1px solid #999;
+    padding-top: 2rem;
+    display: inline-block; }
+  /* line 26, sass/layout/_footer.scss */
+  .footer__item {
+    display: inline-block; }
+    /* line 29, sass/layout/_footer.scss */
+    .footer__item:not(:last-child) {
+      margin-right: 1.5rem; }
+  /* line 35, sass/layout/_footer.scss */
+  .footer__link:link, .footer__link:visited {
+    color: #f1f1f1;
+    background-color: #333;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all 0.3s ease-in-out; }
+  /* line 45, sass/layout/_footer.scss */
+  .footer__link:hover, .footer__link:active {
+    color: #55c57a;
+    box-shadow: 0 1rem 2rem black;
+    transform: rotate(-5deg) scale(1.2); }
+  /* line 53, sass/layout/_footer.scss */
+  .footer__copyright {
+    border-top: 1px solid #999;
+    padding-top: 2rem;
+    width: 80%;
+    float: right;
+    text-align: center; }
+
 /* line 1, sass/pages/_home.scss */
 .section-about {
   background-color: #f1f1f1;
