--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $color-gray: #777;
 $color-gray-light: #f1f1f1;
 $color-gray-light-1: #eee;
 $color-gray-dark-2: #999;
+$color-gray-dark-3: #333;
 
 $color-black: #000000;
 
