--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,36 @@
     clear: both;
   }
 }
+
+// MEDIA QUERY MANAGER
+
+/*
+0-600: PHONE
+600-900: tablet
+900-1200: landscape
+1200-1800: normal styles
+1800+: big screen 
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tabpot {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tablan {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  @if $breakpoint == bigd {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+}
