--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,15 @@
     box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
     text-align: center;
     cursor: pointer;
+
+    @include respond(tabpot) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+    @include respond(phone) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
   }
 
   &__background {
@@ -30,6 +39,15 @@
     );
     z-index: 1000;
     transition: transform 0.8s ease-in-out;
+
+    @include respond(tabpot) {
+      top: 5rem;
+      right: 4.5rem;
+    }
+    @include respond(phone) {
+      top: 4rem;
+      right: 3.5rem;
+    }
   }
 
   &__nav {
