--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,7 +6,6 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: $color-gray;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -21,6 +20,11 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 0.8s ease-in-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -29,6 +33,9 @@ body {
     font-weight: 700;
     letter-spacing: 1.7rem;
     animation: moveInRight 0.8s ease-in-out;
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -46,6 +53,14 @@ body {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.3s ease-in-out;
+
+  @include respond(tabpot) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skew(15deg, 2deg) scale(1.1);
