--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -4,24 +4,43 @@
 
 .u-margin-bottom-big {
   margin-bottom: 8rem;
+
+  @include respond(tabpot) {
+    margin-bottom: 5rem;
+  }
 }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem;
+  @include respond(tabpot) {
+    margin-bottom: 3rem;
+  }
 }
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem;
+  @include respond(tabpot) {
+    margin-bottom: 1rem;
+  }
 }
 
 .u-margin-bottom-huge {
   margin-top: 10rem;
+  @include respond(tabpot) {
+    margin-top: 8rem;
+  }
 }
 
 .u-margin-bottom-big {
   margin-top: 8rem;
+  @include respond(tabpot) {
+    margin-top: 5rem;
+  }
 }
 
 .u-margin-top-huge {
   margin-top: 10rem;
+  @include respond(tabpot) {
+    margin-top: 6rem;
+  }
 }
