--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -9,17 +9,38 @@
     transition: all 0.3s ease-in-out;
     outline-offset: 2rem;
 
+    @include respond(tabpot) {
+      float: left;
+      position: relative;
+      width: 33.33%;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, $alpha: 0.2);
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+      @include respond(tabpot) {
+        top: 0;
+        transform: scale(1.3);
+      }
     }
     &--p2 {
       right: 0;
       top: 2rem;
+      @include respond(tabpot) {
+        top: 0;
+        transform: scale(1.5);
+        z-index: 100;
+      }
     }
     &--p3 {
       left: 20%;
       top: 10rem;
+      @include respond(tabpot) {
+        top: 0;
+        left: 0;
+        transform: scale(1.3);
+      }
     }
 
     &:hover {
