--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -12,6 +12,10 @@
     width: 80%;
     display: block;
 
+    @include respond(phone) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -49,6 +53,11 @@
   &__radio-group {
     width: 50%;
     float: left;
+
+    @include respond(phone) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
