--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,6 +8,16 @@
   transform: skewX(-12deg);
   background-color: rgba($color: $color-white, $alpha: 0.6);
 
+  @include respond(tabpot) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -17,6 +27,9 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0deg);
+    }
   }
 
   &__img {
@@ -28,6 +41,9 @@
 
   &__text {
     transform: skewX(12deg);
+    @include respond(phone) {
+      transform: skewX(0deg);
+    }
   }
 
   &__caption {
