--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,9 +3,16 @@
   padding: 10rem 0;
   color: $color-gray-light;
 
+  @include respond(tabpot) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+    @include respond(tabpot) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -21,6 +28,12 @@
     border-top: 1px solid $color-gray-dark-2;
     padding-top: 2rem;
     display: inline-block;
+    @include respond(tabpot) {
+      width: 100%;
+      text-align: center;
+    }
+    @include respond(phone) {
+    }
   }
 
   &__item {
@@ -56,5 +69,9 @@
     width: 80%;
     float: right;
     text-align: center;
+    @include respond(tabpot) {
+      width: 100%;
+      float: none;
+    }
   }
 }
