--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,43 +1,56 @@
 .row {
   max-width: 114rem;
   margin: 0 auto;
+  padding: 0 3rem;
+
+  @include respond(tabpot) {
+    max-width: 60rem;
+  }
+
+  @include respond(phone) {
+    max-width: 50rem;
+  }
 
   &:not(:last-child) {
     margin-bottom: 8rem;
+
+    @include respond(tabpot) {
+      margin-bottom: 6rem;
+    }
   }
 
   @include clearfix;
 
   [class^="col-"] {
     float: left;
+
+    &:not(:last-child) {
+      margin-right: 6rem;
+
+      @include respond(tabpot) {
+        margin-right: 0rem !important;
+        margin-bottom: 6rem;
+      }
+    }
+
+    @include respond(tabpot) {
+      width: 100% !important;
+    }
   }
 
   .col-1-of-2 {
     width: calc((100% - 6rem) / 2);
-
-    &:not(:last-child) {
-      margin-right: 6rem;
-    }
   }
 
   .col-1-of-3 {
     width: calc((100% - (6rem * 2)) / 3);
-    &:not(:last-child) {
-      margin-right: 6rem;
-    }
   }
 
   .col-2-of-3 {
     width: calc(((100% - (6rem * 2)) / 3) * 2 + 6rem);
-    &:not(:last-child) {
-      margin-right: 6rem;
-    }
   }
 
   .col-1-of-4 {
     width: calc((100% - (6rem * 3)) / 4);
-    &:not(:last-child) {
-      margin-right: 6rem;
-    }
   }
 }
