--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,10 +2,14 @@
   background-color: $color-gray-light;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tabpot) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
-  padding: 20rem 0;
+  padding: 10rem 0;
   background-image: linear-gradient(to right bottom, #7ed56fcb, #28b485cc),
     url("../../img/nat-4.jpg");
   background-size: cover;
@@ -15,16 +19,26 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tabpot) {
+    padding: 15rem 0;
+  }
 }
 
 .section-tours {
   margin-top: -10rem;
   padding: 25rem 0 15rem 0;
+  @include respond(tabpot) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   padding: 15rem 0;
   position: relative;
+  @include respond(tabpot) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
@@ -34,22 +48,36 @@
     $color-primary-light,
     $color-primary-dark
   );
+  @include respond(tabpot) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
   background-image: linear-gradient(
       105deg,
-      rgba($color-white, 0.9) 50%,
-      transparent 50%
+      rgba($color-white, 0.9) 65%,
+      transparent 65%
     ),
     url("../../img/nat-10.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 3px;
-  height: 55rem;
 
   &__form {
     width: 50%;
-    padding: 6rem;
+    padding: 5rem;
+    @include respond(tabpot) {
+      width: 100%;
+    }
+  }
+
+  @include respond(tabpot) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%
+      ),
+      url("../../img/nat-10.jpg");
   }
 }
